# serde-ssml

./: Cargo.toml  LICENSE  Makefile  README.md
src/: break_strength.rs  functions.rs  lib.rs  ser.rs
tests/: first_test.rs  test_serde_json.rs  test_ssml_parse.rs
